# Rgnuplot

./: DESCRIPTION  MD5  NAMESPACE  configure  configure.ac
R/: Rgnuplot.R  zzz.r
demo/: 00Index  Fractal.R  ImageProcessing.R  Interpolation1.R  Interpolation2.R  LaTeX.R  Maungawhau.R  NORDKLIM1.R  NORDKLIM2.R  anim.R  bindings.R  divergingcolormaps.R  errorbars.R  example.R  executedemoscripts.R  fenceplot.R  fitexample1.R  fitexample2.R  fitlaser.R  hello1.R  hello1b.R  hello2.R  hello3.R  hello4.R  hello5.R  histogram3D.R  maps.R  maps1.R  maps2.R  maps3.R  multiplot.R  palettes.R  plotRGB.R  polynomialfit.R  randomwalk1D.R  randomwalk2D.R  randomwalk3D.R  rpbivariatenormal.R  rpnormal.R  sinepng.R
inst/: CITATION
inst/doc/: RgnuplotManual.Rnw
inst/extdata/: GHCN_GISS_HR2SST_1200km_Anom11_2012_2012_1951_1980.txt  GHCN_GISS_HR2SST_250km_Anom11_2012_2012_1951_1980.txt  NordklimStationCatalogue.tab  bivariatenormal.gnu  blutuxwithpalettePNG.gpl  data.xls  extrafunc.gnu  fenceplot.gnu  (+7 more)
man/: GpCheckHandle.Rd  GpPNG2RGB.Rd  GpPNG2color.Rd  GpPNG4DEM.Rd  GpR2plot.Rd  GpR2splot.Rd  GpRGB2image.Rd  GpSHP2gnu.Rd  GpURL2string.Rd  GpWindowStatus.Rd  GpX11Present.Rd  Gpclose.Rd  Gpcmd.Rd  Gpcolorhistogram.Rd  Gpcols2rows.Rd  GpdivergingColormap.Rd  Gperrmsg.Rd  Gpext2terminal.Rd  Gpfile2string.Rd  GpfitAllprogress.Rd  GpfitProgress.Rd  Gpgetfontpath.Rd  Gpgetloadpath.Rd  Gpgetvariable.Rd  Gpgetwd.Rd  Gph.Rd  GphexRGB.Rd  GpimageCrop.Rd  GpimageRgbchange.Rd  Gpinit.Rd  GpinitSaveStderr.Rd  GpisWindowOpen.Rd  GpkillpidX11.Rd  Gpload.demo.Rd  Gpmandel.Rd  GpmapMerpar.Rd  Gpmath3dPlot.Rd  Gpmatrix2GimpPalette.Rd  Gpmatrix2XYdata.Rd  GpmatrixfilePad.Rd  (+99 more)
src/: Makevars  Makevars.in  Rgnuplot.c  gnuplot_i.c  gnuplot_i.h
